--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,17 +11,17 @@
     <body>
         {% block body %}
             <div class="container">
-                <nav class="navbar navbar-default" role="navigation">
+                <nav class="navbar navbar-inverse" role="navigation">
                     <div class="container-fluid">
                         <!-- Brand and toggle get grouped for better mobile display -->
                         <div class="navbar-header">
                             <a class="navbar-brand" href="#">Home</a>
                         </div><!-- /.navbar-collapse -->
-                        <ul class="nav navbar-nav navbar-left">
-                            <li><a href="#">Category</a></li>
-                            <li><a href="#">Add product</a></li>
-                            <li><a href="#">Update product</a></li>
-                            <li><a href="#">Delete product</a></li>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="#">Last adverts</a></li>
+                            <li><a href="#">Last rubrics</a></li>
+                            <li><a href="#">Add advert</a></li>
+                            <li><a href="#">Add rubric</a></li>
                         </ul>
                     </div><!-- /.container-fluid -->
                 </nav>
