--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,27 +8,47 @@
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
-    <body>
+    <body style="padding-top: 70px">
         {% block body %}
-            <div class="container">
-                <nav class="navbar navbar-inverse" role="navigation">
-                    <div class="container-fluid">
-                        <!-- Brand and toggle get grouped for better mobile display -->
-                        <div class="navbar-header">
-                            <a class="navbar-brand" href="#">Home</a>
-                        </div><!-- /.navbar-collapse -->
+            <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="{{ path('iboved_advert_advert_index') }}">Project name</a>
+                    </div>
+                    <div id="navbar" class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a href="{{ path('iboved_advert_advert_index') }}">Home</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                        </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#">Last adverts</a></li>
-                            <li><a href="#">Last rubrics</a></li>
-                            <li><a href="#">Add advert</a></li>
+                            <li><a href="#">Adverts</a></li>
+                            <li><a href="{{ path('iboved_advert_advert_add') }}">Add advert</a></li>
+                            <li><a href="#">Rubrics</a></li>
                             <li><a href="#">Add rubric</a></li>
                         </ul>
-                    </div><!-- /.container-fluid -->
-                </nav>
+                    </div><!-- /.nav-collapse -->
+                </div><!-- /.container -->
+            </nav><!-- /.navbar -->
+
+            <div class="container">
                 {% block container %}
 
                 {% endblock %}
-            </div>
+
+                <hr>
+
+                <footer>
+                    <p>&copy; Vladimir Gavrilov 2014</p>
+                </footer>
+
+            </div><!--/.container-->
         {% endblock %}
         {% block javascripts %}
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
