--- a/src/Iboved/AdvertBundle/Resources/views/Advert/index.html.twig
+++ b/src/Iboved/AdvertBundle/Resources/views/Advert/index.html.twig
@@ -1,7 +1,29 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}Hello!{% endblock %}
+{% block title %}Bulletin board{% endblock %}
 
 {% block container %}
-    {{ hello }}
+    <div class="row row-offcanvas row-offcanvas-right">
+
+        <div class="col-xs-12 col-sm-12">
+            <p class="pull-right visible-xs">
+                <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
+            </p>
+            <div class="jumbotron">
+                <h2>Welcome!</h2>
+                <p>This is a free adverts service. You can easily add your advertisement on our site.</p>
+            </div>
+            <div class="row">
+            {% for advert in adverts %}
+                    <div class="col-xs-4 col-lg-4">
+                        <h2> {{ advert.title }} </h2>
+                        <p> {{ advert.description|slice(0, 195) }}... </p>
+                        <p> {{ advert.rubric.name }} </p>
+                        <p> {{ advert.createdAt|date }} </p>
+                        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                    </div><!--/.col-xs-4.col-lg-4-->
+            {% endfor %}
+            </div><!--/row-->
+        </div><!--/.col-xs-12.col-sm-12-->
+    </div><!--/row-->
 {% endblock %}
