Added price field

--- a/src/Iboved/AdvertBundle/Resources/views/Advert/edit.html.twig
+++ b/src/Iboved/AdvertBundle/Resources/views/Advert/edit.html.twig
@@ -15,6 +15,7 @@
     {{ form_row(form.user.phone) }}
     {{ form_row(form.title) }}
     {{ form_row(form.description) }}
+    {{ form_row(form.price) }}
     {{ form_row(form.rubric) }}
 
     {{ form_end(form) }}
