--- a/src/Iboved/AdvertBundle/Resources/views/Advert/index.html.twig
+++ b/src/Iboved/AdvertBundle/Resources/views/Advert/index.html.twig
@@ -18,8 +18,9 @@
                     <div class="col-xs-4 col-lg-4">
                         <h2> {{ advert.title }} </h2>
                         <p> {{ advert.description|slice(0, 195) }}... </p>
-                        <p> {{ advert.rubric.name }} </p>
-                        <p> {{ advert.createdAt|date }} </p>
+                        <p>Price: {{ advert.price }} </p>
+                        <p>Rubric: {{ advert.rubric.name }} </p>
+                        <p>Created: {{ advert.createdAt|date }} </p>
                         <p><a class="btn btn-default" href="{{ path('iboved_advert_advert_view', {'slug' : advert.slug}) }}" role="button">View details &raquo;</a></p>
                     </div><!--/.col-xs-4.col-lg-4-->
             {% endfor %}
