Added updateAt field

--- a/src/Iboved/AdvertBundle/Resources/views/Advert/view.html.twig
+++ b/src/Iboved/AdvertBundle/Resources/views/Advert/view.html.twig
@@ -12,6 +12,7 @@
             <p>Price: {{ advert.price }} </p>
             <p>Rubric: {{ advert.rubric.name }} </p>
             <p>Created: {{ advert.createdAt|date }} </p>
+            <p>Last update: {{ advert.updatedAt|date }} </p>
             <hr>
             <h4>Contacts</h4>
             Name: {{ advert.user.name }} <br>
